refactor: streamline appointment and owner services, remove unused methods and enhance duration handling